--- a/gitFirstStart/bookingApp.html
+++ b/gitFirstStart/bookingApp.html
@@ -6,6 +6,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" href="C:\Users\Dell\Desktop\WebProjects\gitFirstStart\bookingApp.css">
+
+
 </head>
 <body >
 <section class="container" >
@@ -16,17 +18,18 @@
 <div class ="msg"></div>
 <div>
 <label for="name">Name:</label>
-<input type="text" id ="name" name="username" required autocomplete="additional-name">
+<input type="text" id ="name" name="username"  autocomplete="username" required>
 </div>
 <div>
 <label for="email">Email:</label>
-<input type="text" id ="email" name='emailId' required autocomplete="additional-name">
+<input type="text" id ="email" name='emailId'  autocomplete="email" required>
 </div>
 <input  class ="btn" type="submit" value="submit" >
  
 </form>
 </section>
-<script>
+</body>
+<script  type="text/javascript">
 function onSubmit(e){
 e.preventDefault();
 const name=e.target.username.value;
@@ -35,5 +38,5 @@ localStorage.setItem('name', name);
 localStorage.setItem('email', email);
 }
 </script>
-</body>
+
 </html>
