--- a/gitFirstStart/crudGetDetails.html
+++ b/gitFirstStart/crudGetDetails.html
@@ -33,18 +33,25 @@ const obj={
     name,
     email
 };
-axios.post("https://crudcrud.com/api/1805afe549bb4fdd9e03496bca3700e5/appointmentData",obj)
-.then((response)=>{
-    showuseronScreen(response.data);
-    console.log(response)
-})
-.catch((err) => {
-    console.log(err)
-})
+
+
 //localStorage.setItem(obj.email,JSON.stringify(obj));
 //localStorage.setItem(obj,btn);
 //showuseronScreen(obj);
 }
+window.addEventListener("DOMContentLoaded", ()=>{
+    axios.get("https://crudcrud.com/api/1805afe549bb4fdd9e03496bca3700e5/appointmentData")
+    .then((response)=>{
+    console.log(response)
+
+    for(var i=0;i<response.data.length;i++){
+        showuseronScreen(response.data[i])
+    }
+})
+.catch((err) => {
+    console.log(err)
+})  
+})
 function showuseronScreen(obj)
 {
     const parentElem=document.getElementById('listofitems');
